@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013 Irkutsk Diagnostic Center.
+ * Copyright (C) 2013-2014 Irkutsk Diagnostic Center.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -21,8 +21,6 @@
 #include <QGst/ElementFactory>
 #include <QGst/Pipeline>
 #include <QGst/Structure>
-
-#include <QDebug>
 
 // Copied from gfile.c from GIO library
 //
